# REGoth-bs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
ci/: build-linux.sh  build-windows.sh  pack-release-linux.sh  pack-release-windows.sh
cmake/: automate-vcpkg.cmake
docs/: .buildinfo  conf.py  genindex.html  (+4 more)
docs-source/: CMakeLists.txt  Doxyfile.in  conf.py.in  index.rst
docs-source/_static/css/: custom.css
docs-source/case-studies/: character-statemachine.rst  daedalus-vm.rst  scene-structure.rst  sky.rst
docs-source/code-ref/: core.rst
docs-source/content/: building.rst  case-study-character-statemachine.rst  case-study-object-kinds.rst  case-study-scene-structure.rst  character-statemachine.rst  characters.rst  create-component.rst  daedalus-vm.rst  extending-docs.rst  hello-world.rst  object-kinds.rst  scene-structure.rst  style.iuml  world.rst
docs-source/getting-started/: building-docs.rst  building-regoth.rst  running.rst
docs-source/tutorials/: characters.rst  create-component.rst  setting-up-app.rst  waynet.rst  world.rst
src/: CMakeLists.txt  REGothEngine.cpp  REGothEngine.hpp  core.hpp  main.cpp  main_CharacterMovementTest.cpp  main_CharacterViewer.cpp  main_FocusTester.cpp  main_FontViewer.cpp  main_MobViewer.cpp  main_ScriptTest.cpp  main_WaynetTest.cpp  main_WorldCacheTest.cpp  main_WorldMeshViewer.cpp  main_WorldViewer.cpp
src/AI/: EventMessage.cpp  EventMessage.hpp  Pathfinder.cpp  Pathfinder.hpp  ScriptState.cpp  ScriptState.hpp  WalkMode.hpp  WeaponMode.hpp
src/RTTI/: RTTIPlainTypes.hpp  RTTIUtil.hpp  RTTIUtil_Component.hpp  RTTI_Character.hpp  RTTI_CharacterAI.hpp  RTTI_CharacterEventQueue.hpp  RTTI_CharacterKeyboardInput.hpp  RTTI_Console.hpp  RTTI_DaedalusVMForGameWorld.hpp  RTTI_Debug.hpp  RTTI_DebugUI.hpp  RTTI_EventMessages.hpp  RTTI_EventQueue.hpp  RTTI_Focusable.hpp  RTTI_Freepoint.hpp  RTTI_GameClock.hpp  RTTI_GameUI.hpp  RTTI_GameWorld.hpp  RTTI_GameplayUI.hpp  RTTI_GenericMaterialModifier.hpp  RTTI_Inventory.hpp  RTTI_Item.hpp  RTTI_MaterialModifier.hpp  RTTI_MeshVisual.hpp  RTTI_NeedsGameWorld.hpp  RTTI_NodeVisuals.hpp  RTTI_Pathfinder.hpp  RTTI_REGothDaedalusVM.hpp  RTTI_RaycastShadowSampler.hpp  RTTI_ScriptBackedBy.hpp  RTTI_ScriptClassTemplates.hpp  RTTI_ScriptObject.hpp  RTTI_ScriptObjectMapping.hpp  RTTI_ScriptObjectStorage.hpp  RTTI_ScriptState.hpp  RTTI_ScriptSymbolStorage.hpp  RTTI_ScriptSymbols.hpp  RTTI_ScriptVM.hpp  RTTI_ScriptVMForGameWorld.hpp  RTTI_ShadowSampler.hpp  (+20 more)
src/animation/: Animation.cpp  Animation.hpp  StateNaming.cpp  StateNaming.hpp
src/common/: BsAnchoredTextLabels.cpp  BsAnchoredTextLabels.h  BsCameraZoomer.cpp  BsCameraZoomer.h  BsFPSCamera.cpp  BsFPSCamera.h  BsFPSWalker.cpp  BsFPSWalker.h  BsObjectRotator.cpp  BsObjectRotator.h
src/components/: AnchoredTextLabels.cpp  AnchoredTextLabels.h  Character.cpp  Character.hpp  CharacterAI.cpp  CharacterAI.hpp  CharacterEventQueue.cpp  CharacterEventQueue.hpp  CharacterKeyboardInput.cpp  CharacterKeyboardInput.hpp  CharacterState.cpp  CharacterState.hpp  Console.cpp  Console.hpp  Debug.cpp  Debug.hpp  DebugUI.cpp  DebugUI.hpp  EventQueue.cpp  EventQueue.hpp  Focusable.cpp  Focusable.hpp  Freepoint.cpp  Freepoint.hpp  GameClock.cpp  GameClock.hpp  GameUI.cpp  GameUI.hpp  GameWorld.cpp  GameWorld.hpp  GameplayUI.cpp  GameplayUI.hpp  Inventory.cpp  Inventory.hpp  Item.cpp  Item.hpp  MeshVisual.cpp  MeshVisual.hpp  NeedsGameWorld.cpp  NeedsGameWorld.hpp  (+48 more)
src/components/Console/: Command.hpp  Console.cpp  Console.hpp  TokenType.hpp  Trie.hpp
src/core/: AbstractEngine.cpp  AbstractEngine.hpp  EmptyEngine.cpp  EmptyEngine.hpp  EmptyGame.cpp  EmptyGame.hpp  Engine.cpp  Engine.hpp  EngineConfig.cpp  EngineConfig.hpp  GameType.hpp  Gothic1Game.cpp  Gothic1Game.hpp  Gothic2Game.cpp  Gothic2Game.hpp  ParseArguments.hpp  ParseArguments.tpp  RunEngine.cpp  RunEngine.hpp  functions.cpp  functions.hpp  functions.tpp
src/debug/: Console.cpp  Console.hpp
src/engine-content/: EngineContent.cpp  EngineContent.hpp
src/engine-content/internal/: FindEngineContent.cpp  FindEngineContent.hpp
src/excepction/: Throw.hpp
src/exception/: Assert.hpp  AssertionException.hpp  Throw.hpp
src/gui/: skin_gothic.cpp  skin_gothic.hpp
src/log/: logging.hpp
src/original-content/: OriginalGameFiles.cpp  OriginalGameFiles.hpp  OriginalGameResources.cpp  OriginalGameResources.hpp  VirtualFileSystem.cpp  VirtualFileSystem.hpp
src/scripting/: DATSymbolStorageLoader.cpp  DATSymbolStorageLoader.hpp  REGothDaedalusVM.hpp  ScriptClassTemplates.cpp  ScriptClassTemplates.hpp  ScriptObject.cpp  ScriptObject.hpp  ScriptObjectMapping.cpp  ScriptObjectMapping.hpp  ScriptObjectStorage.cpp  ScriptObjectStorage.hpp  ScriptObjects.cpp  ScriptObjects.hpp  ScriptSymbolQueries.cpp  ScriptSymbolQueries.hpp  ScriptSymbolStorage.cpp  ScriptSymbolStorage.hpp  ScriptSymbols.cpp  ScriptSymbols.hpp  ScriptTypes.hpp  ScriptVM.cpp  ScriptVM.hpp  ScriptVMForGameWorld.cpp  ScriptVMForGameWorld.hpp  ScriptVMInterface.cpp  ScriptVMInterface.hpp
src/scripting/daedalus/: DATSymbolStorageLoader.cpp  DATSymbolStorageLoader.hpp  DaedalusClassVarResolver.cpp  DaedalusClassVarResolver.hpp  DaedalusDisassembler.cpp  DaedalusDisassembler.hpp  DaedalusStack.cpp  DaedalusStack.hpp  DaedalusVMForGameWorld.cpp  DaedalusVMForGameWorld.hpp  DaedalusVMWithExternals.cpp  DaedalusVMWithExternals.hpp  REGothDaedalusVM.cpp  REGothDaedalusVM.hpp  ResolveClassMembers.cpp  ResolveClassMembers.hpp
src/sky/: SkyColoring.cpp  SkyColoring.hpp
src/visual/: GenericMaterialModifier.cpp  GenericMaterialModifier.hpp  MaterialModifier.cpp  MaterialModifier.hpp  RaycastShadowSampler.cpp  RaycastShadowSampler.hpp  ShadowSampler.cpp  ShadowSampler.hpp
src/world/: ConstructFromZEN.cpp  GameWorld.cpp  GameWorld.hpp  WorldHashGrid.hpp
src/world/internals/: ConstructFromZEN.cpp  ConstructFromZEN.hpp  ImportSingleVob.cpp  ImportSingleVob.hpp  LoadCachedZEN.cpp  LoadCachedZEN.hpp  VobImporter.cpp  VobImporter.hpp  Waynet.hpp  ZenCache.cpp  ZenCache.hpp  ZenImporter.cpp  ZenImporter.hpp
(+57 files in other folders)
